server: document bootstrap, fix some typos and bugs